# vo-projects

./: .gitignore  0mission  LICENSE  Makefile  Makefile.charmm  Makefile.inc  charmm.msg  charmm_dist  chm_output.def  configure.inc  contexts.def  dmol.defs  dmol_select_macro.def  exec.def  fyou  getcode  input_macros.src  log.mk  mkdist  mpitype.def  prefx2cpp  rab11a_nvt_now.dcd  rab11a_nvt_now5.dcd  setcomm.def  source.defs  source.msg  source.msg.ori  test.msg.ori  update
CUDA/: .gitignore  0readme
FER/: .gitignore  0readme  FreeEnergyAssert.h  FreeEnergyEnums.h  FreeEnergyGroup.C  FreeEnergyGroup.h  FreeEnergyLambdMgr.C  FreeEnergyLambdMgr.h  FreeEnergyLambda.C  FreeEnergyLambda.h  FreeEnergyParse.C  FreeEnergyParse.h  FreeEnergyRMgr.C  FreeEnergyRMgr.h  FreeEnergyRestrain.C  FreeEnergyRestrain.h  GlobalMasterFreeEnergy.C  GlobalMasterFreeEnergy.h  InfoStream.C  InfoStream.h  Makefile.namd  SimParameters.C
GBISACE/: NAMD2.12-GBISACE.patch
adaptive/: .gitignore  0readme  Makefile  adaptive_template.ftn  source.defs  test.ftn  test.m
bestfit/: .gitignore  0readme  Makefile  bestfit.F90  bestfit.H  bestfit.ftn  bestfit.h  bestfit.i  bestfit.mod  bestfit.src  bestfit_c.ftn  bfit  bfit.F90  cbindtest.c  const.F90  const.mod  ctest  ctest.c  eig3s_lapack.def  fort.666  jacobi.ftn  plot  source.defs  test  test.F90  test.ftn  test.m  test.out
c38b2/: README.STRINGM  chmdiff38b2  stringm_patch_38b2
c39a1/: README.STRINGM  chmdiff39a1  stringm_patch_39a1
chest/: .gitignore  0readme  Makefile  Makefile.inc  PBmacro1.def  PBmacro2.def  PBmain.F90  PBmain.ftn  bc.F90  bc.ftn  bc.mod  ches  ches.F90  ches.ftn  fieldbcdef.ftn  grid.F90  grid.ftn  grid.mod  gridsize.F90  gridsize.ftn  gridsize.mod  message.def  multigrid.F90  multigrid.ftn  multigrid.mod  pbmain.mod  source.defs  state.F90  state.ftn  state.mod  update_log
chmdev/: .gitignore  0readme  Makefile_gnu.patch  chmnew39a2dev  dynamc_int8.patch  ensemble_rm_string.patch  mkdiff  mknew  mkpatch  mkstrdiff  prefx2cpp  prefx_protect  rmkey  rmkeys  travel.patch
confcons/: Makefile  chirality.F90  chirality.ftn  chirality.mod  chirality.src  confcons.F90  confcons.ftn  confcons.mod  confcons.src  source.defs  update_log
constants/: .gitignore  Makefile  constants.F90  constants.ftn  constants.mod  test  test.ftn
continua/: Makefile  Makefile.inc  outmacro1.def  source.defs
datatypes/: Makefile  datatypes.ftn  fieldbcdef.ftn
driver/: .gitignore  Makefile  codes.def  driver.ftn  info  input  mpi  muphen
dynamol/: .gitignore  Makefile  autovar.def  dmol.ftn  dynamo.F90  input  minimal_system.ftn  molsim.F90  molsim.ftn  molsim.mod  multicom_def.src  pca.ftn  source.defs  stats.F90  stats.ftn  stats.mod  sysinfo.F90  sysinfo.ftn  sysinfo.mod  sysmanip.F90  sysmanip.ftn  sysmanip.mod  system.F90  system.ftn  system.mod  update_log  verlet.F90  verlet.ftn  verlet.mod
elec/: .gitignore  0readme  Makefile  direct3.ftn  direct3_nosym.ftn  direct3p.F90  direct3p_nosym.F90  elec.ftn  elec_util.ftn  filt3.F90  filt3.ftn  filt3p.F90  filters.def  input  run.F90  setup.F90  setup.ftn  source.def  test.F90  test.ftn  util.F90  vars.F90  vars.ftn  wzip.inp  wzip.out
enm/: .gitignore  0readme  Makefile  enm.ftn  fit.ftn  fort.500  fort.600  fort.700  fort.800  stiff.m  test2.m
erf/: .gitignore  0readme  Makefile  a.out  erf.H  erf_as.def  erf_ext.F90  erf_ext.ftn  erf_ext.mod  erfappx.F90  erfappx.ftn  erfsun_2_f90.c  exp_as.def  ierfappx.ftn  test  test.ftn  test.out
files/: Makefile  files.F90  files.ftn  files.mod  fopen.def
griddata/: Makefile  gridscalartemplate.ftn  gridscalartype.ftn  source.defs
include/: .gitignore  ANGLPAR.mod  ATOMPAR.mod  BC.mod  BESTFIT.mod  BONDPAR.mod  CHARMMIO.mod  CHIRALITY.mod  CH_PARAM.mod  CONFCONS.mod  CONSTANTS.mod  CV_ANGLE_COM.mod  CV_ANGLVEC.mod  CV_COMMON.mod  CV_CVRMS.mod  CV_DIHE_COM.mod  CV_DIST_COM.mod  CV_DRMSD.mod  CV_FRAMES.mod  CV_POSI_COM.mod  CV_PROJ.mod  CV_QCOMP.mod  CV_QUATERNION.mod  CV_RMSD.mod  CV_TYPES.mod  DIHEPAR.mod  ENM.mod  ERF_EXT.mod  FILES.mod  FORMATS.mod  FREEIO.mod  FTSM.mod  FTSM_REX.mod  FTSM_VAR.mod  FTSM_VORONOI.mod  GRID.mod  GRIDSIZE.mod  IVECTOR.mod  IVECTOR_LIST.mod  LU.mod  (+107 more)
lu/: .gitignore  Makefile  lu.F90  lu.ftn  lu.mod  lu.src
modules/: ftsm_var.mod  lu.mod
mpi_stub/: Makefile  mpi_compat_stub.ftn  mpi_compat_stub.src
multicom/: .gitignore  Makefile  deps  ifstack.ftn  multicom.F90  multicom.ftn  multicom.mod  multicom.src  multicom_aux.F90  multicom_aux.ftn  multicom_aux.mod  multicom_aux.src  multicom_ltm.src  source.defs
multidiag/: Makefile  multidiag.F90  multidiag.ftn  multidiag.mod  multidiag.src
namdev/: Molecule.C  NAMD_2.10b2_4amuh.patch  mknamdiff  mknamdpatch  namdiff2013-06-24.tgz  oMolecule.C
output/: .gitignore  Makefile  output.F90  output.ftn  output.mod  test  test.ftn  test.out  update_log
parselist/: Makefile  iparselist.F90  iparselist.ftn  parselist.F90  parselist.ftn  parselist.mod  parselist.src  parser.src  update
parser/: .gitignore  0update_chest  Makefile  _parser.tmp  cmd.ftn  parser.F90  parser.ftn  parser.mod  parser_macro1.src  parser_macro2.src  parser_macro3.src  prm.ftn  source.defs  test.ftn  update_log
plugin_master/: .gitignore  0readme  Makefile  aceplug.h  adaptive.defs  (+19 more)
plugin_master/openmm-dynamo/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  compile
plugin_master/openmm-dynamo/openmmapi/include/: DynamoForce.h  DynamoKernels.h
plugin_master/openmm-dynamo/openmmapi/include/internal/: DynamoForceImpl.h  windowsExportDynamo.h
plugin_master/openmm-dynamo/openmmapi/src/: DynamoForce.cpp  DynamoForceImpl.cpp
plugin_master/openmm-dynamo/python/: CMakeLists.txt  dynamoplugin.i  setup.py
plugin_master/openmm-dynamo/serialization/include/: DynamoForceProxy.h
plugin_master/openmm-dynamo/serialization/src/: DynamoForceProxy.cpp  DynamoSerializationProxyRegistration.cpp
plugin_master/openmm-dynamo/serialization/tests/: CMakeLists.txt  TestSerializeDynamoForce.cpp
plugin_master/openmm-dynamo/wrappers/: CMakeLists.txt  Doxyfile.in  generateDynamoWrappers.py
(+1481 files in other folders)
